--- a/css/homepage.css
+++ b/css/homepage.css
@@ -129,14 +129,111 @@ select{
     margin-top: 50px;
 }
 
-
 .componentHeading{
     font-Size:30px;
     color:green
 }
 
-
 .componentSubHeading{
     font-Size:20px;
     color:gray
+}
+
+
+@media screen and (max-width:1600px){
+    body{
+        background-color: rgb(238, 250, 238);
+    }
+}
+
+@media screen and (max-width:1400px){
+    body{
+        background-color: skyblue;
+    }
+}
+
+@media screen and (max-width:1200px){
+    body{
+        background-color: lightcoral;
+    }
+}
+
+@media screen and (max-width:1000px){
+    body{
+        background-color: rgb(236, 241, 160);
+    }
+    #quickSearch{
+        width:80%;
+        margin-left: 10%;
+    }
+    .componentHeading{
+        color:white
+    }
+    
+    .componentSubHeading{
+        color:white
+    }
+    #QuickSearchHeading{
+        color:white;
+    }
+    
+    #QuickSearchSubHeading{
+        color:white;
+    }
+    #dropdown {
+        width: 50%;
+    }
+    #logo > span {
+        margin-left: -6%;
+    }
+    #heading {
+        width: 45%;
+        margin-left: 33%;
+    }
+}
+
+@media screen and (max-width:800px){
+    body{
+        background-color: rgb(184, 168, 241);
+    }
+    .tileContainer{
+        width:90%;
+    }
+    .componentHeading{
+        color:green
+    }
+    
+    .componentSubHeading{
+        color:gray
+    }
+    #QuickSearchHeading{
+        color:green;
+    }
+    
+    #QuickSearchSubHeading{
+        color:gray;
+    }
+    #dropdown {
+        width: 65%;
+    }
+    #logo > span {
+        margin-left: -8%;
+    }
+}
+
+@media screen and (max-width:600px){
+    body{
+        background-color: rgb(185, 241, 209);
+    }
+    #dropdown {
+        width: 80%;
+        margin-left:10%
+    }
+    #heading{
+        width: 45%;
+        margin-left: 25%;
+    }
+    #logo{
+        margin-left: 33%;
+    }
 }
