--- a/css/homepage.css
+++ b/css/homepage.css
@@ -237,3 +237,20 @@ select{
         margin-left: 33%;
     }
 }
+
+@media screen and (max-width:360px){
+    body{
+        background-color: rgb(185, 241, 209);
+    }
+    #dropdown {
+        width: 80%;
+        margin-left:10%
+    }
+    #heading{
+        width: 45%;
+        margin-left: 25%;
+    }
+    #logo{
+        margin-left: 33%;
+    }
+}
